infra/k8s/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: auth
