infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: ingress-srv
spec:
  rules:
    - host: minikube.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/users/?(.*)"
            backend:
              service:
                name: auth-srv
                port:
                  number: 8000
